# lmms-engine

./: README.md  pyproject.toml
docs/models/: qwenvl.md
examples/qwen3_vl/: example_config.yaml  qwen3_vl_4b_train.sh
src/lmms_engine/datasets/iterable/: multimodal_iterable_dataset.py  qwen3_vl_iterable_dataset.py
src/lmms_engine/datasets/naive/: __init__.py
src/lmms_engine/datasets/processor/: __init__.py  llava_video_processor.py
src/lmms_engine/models/bagel/: bagel.py  inferencer.py  qwen2_navit.py
src/lmms_engine/train/: runner.py
src/lmms_engine/train/fsdp2/: fsdp2_trainer.py
src/lmms_engine/utils/: train_utils.py
