[tool.black]
line-length = 120

[build-system]
requires = ["setuptools>=42", "wheel", "setuptools_scm[tomli]>=6.3"]
build-backend = "setuptools.build_meta"

[project]
name = "lmms_engine"
version = "0.1.2"
authors = [{name = "LMMs-Lab"}]
description = "A simple, unified multimodal models training engine. Lean, flexible, and built for hacking, and hacking at scale."
readme = "README.md"
requires-python = "==3.12"
license = { text = "Apache-2.0" }
dependencies = [
    "datasets",
    "hf_transfer",
    "transformers",
    "accelerate",
    "pillow",
    "peft",
    "deepspeed",
    "bitsandbytes",
    "triton",
    "loguru",
    "pydantic",
    "jsonlines",
    "librosa",
    "nvidia-ml-py",
    "decord",
    "torch==2.8.0",
    "torchvision",
    "pyyaml",
    "wandb",
    "torchdata",
    "liger-kernel",
    "qwen-vl-utils",
    "qwen-omni-utils",
    "einops",
    "pandas",
    "rich>=14.1.0",
    "hydra-core",
    "omegaconf",
    "requests",
    "tqdm",
    "opencv-python",
    "flash-attn",
]

[project.optional-dependencies]
pref = [
    "trl",
    "math-verify",
]

storage = [
    "google-cloud-storage",
    "azure-storage-blob",
    "azure-identity",
]

bagel = [
    "opencv_python",
]

sit = [
    "timm",
    "diffusers",
    "torchdiffeq",
]

all = [
    "lmms_engine[pref]",
    "lmms_engine[storage]",
]


[tool.setuptools.packages.find]
where = ["src"]
include = ["*"]
exclude = [
    "test"
]

[tool.wheel]
exclude = [
    "test"
]

[project.scripts]
lmms_launch="lmms_engine.launch.cli:main"


[project.urls]
Homepage = "https://lmms-lab.com/"
Repository = "https://github.com/EvolvingLMMs-Lab/lmms_engine"

[tool.isort]
known_third_party = ["wandb"]

[tool.uv.sources]
flash-attn = { path = "../../downloads/flash_attn-2.8.3+cu12torch2.8cxx11abiFALSE-cp312-cp312-linux_x86_64.whl" }
